tags/pyang-1.0/test/test_bad/infinite-loop.yang
module infinite-loop {
  namespace "urn:test";
  prefix "infinite";
  
  grouping target {
    container c;
    uses target; // error: cyclic grouping!
  }

}
